# advent-of-code

./: .eslintrc.js  .gitignore  Cargo.toml  README.md  aoc.js  package-lock.json  package.json  runner.js
01/: README.md  puzzle-2.js  puzzle.js
02/: README.md  puzzle-2.js  puzzle.js
03/: README.md  puzzle-2.js  puzzle.js
04/: puzzle-2.js
2017/11/: README.md  input-dummy.txt
2020/01/: README.md  puzzle-2.js  puzzle.js
2020/02/: README.md  puzzle-2.js  puzzle.js
2020/05/: puzzle-2.js  puzzle.js
2020/06/: puzzle-2.js  puzzle.js
2021/01/: README.md  puzzle-2.js  puzzle.js
2021/02/: puzzle-2.js  puzzle.js
2021/03/: puzzle.js
2021/04/: README.md  puzzle-2-alt.js  puzzle.js
2021/05/: README.md  puzzle-2-perf.js  puzzle-2-slow.js  puzzle-2.js  puzzle.js
2021/06/: README.md  puzzle-2.js  puzzle.js
2021/07/: README.md  puzzle-2-perf.js  puzzle-2.js  puzzle.js
2021/08/: README.md  puzzle-2.js  puzzle.js
2021/09/: README.md  puzzle-2.js  puzzle.js
2021/10/: README.md  puzzle-2.js  puzzle.js
2021/11/: puzzle-2.js  puzzle.js
2021/12/: README.md  puzzle-2.js  puzzle.js
2021/13/: README.md  puzzle-2.js  puzzle.js
2021/14/: README.md  puzzle-2.js  puzzle.js
2021/15/: README.md  puzzle-2.js  puzzle.js
2021/16/: README.md  puzzle-2-alt.js  puzzle-2.js  puzzle.js
2021/17/: README.md  puzzle-2.js  puzzle.js
2021/18/: README.md  puzzle-2.js  puzzle.js
2022/01/: README.md
2022/02/: README.md
__template__/: puzzle-2.js
benches/: bench-2022.rs  bench-2023.rs
cli/: generate.js  index.js  run.js
src/: lib.rs  main.rs  runner.rs
(+41 files in other folders)
