[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
criterion = "0.5.1"
itertools = "0.10.5"
pathfinding = "4.0.1"
primes = "0.3.0"


[[bench]]
name = "bench-2023"
harness = false
