[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
colored = "2.0.4"
criterion = "0.5.1"
pathfinding = "4.4.0"
primes = "0.3.0"
rayon = "1.8.0"


[[bench]]
name = "bench-2023"
harness = false

[[bench]]
name = "bench-2022"
harness = false
